# mlflow-oidc-auth

./: .gitmodules  Dockerfile  pyproject.toml
.github/workflows/: pk-build-mlflow-oidc-auth.yaml  pk-build.yaml
buildfiles/: .dockerignore  Dockerfile  README.md  build-locally.sh  entrypoint.sh  pyproject.toml
docs/: configuration.md  permissions.md
mlflow_oidc_auth/: config.py  constants.py  dependencies.py  entities.py  logger.py  permissions.py  routes.py  sqlalchemy_store.py  user.py
mlflow_oidc_auth/db/: models.py
mlflow_oidc_auth/entities/: __init__.py  _base.py  experiment.py  gateway_endpoint.py  gateway_model_definition.py  gateway_secret.py  group.py  registered_model.py  scorer.py  user.py  user_token.py
mlflow_oidc_auth/hack/: menu.html
mlflow_oidc_auth/hooks/: after_request.py  before_request.py
mlflow_oidc_auth/models/: __init__.py  gateway.py  group.py  responses.py  user.py
mlflow_oidc_auth/repository/: __init__.py  gateway_endpoint_group_permissions.py  gateway_endpoint_group_regex_permissions.py  gateway_endpoint_permissions.py  gateway_endpoint_regex_permissions.py  gateway_model_definition_group_permissions.py  gateway_model_definition_group_regex_permissions.py  gateway_model_definition_permissions.py  gateway_model_definition_regex_permissions.py  gateway_secret_group_permissions.py  gateway_secret_group_regex_permissions.py  gateway_secret_permissions.py  gateway_secret_regex_permissions.py  scorer_permission_group.py  user.py  user_token.py
mlflow_oidc_auth/routers/: __init__.py  _prefix.py  gateway_endpoint_permissions.py  ui.py  (+8 more)
(+228 files in other folders)
