[project]
name = "mlflow-docker"
version = "1.2.0"
description = "MLFlow with OIDC docker image"
authors = [{ name = "Alexander Kharkevich", email = "alex@kharkevich.org" }]
requires-python = ">=3.12, <3.13.dev0"
dependencies = [
    # mlflow-oidc-auth will be installed from local source
    "mlflow>=3.8.1,<4",
    "boto3>=1.42.26",
    "azure-storage-blob>=12.25.1",
    "azure-identity>=1.25.1",
    "google-cloud-storage>=3.1.0",
    "psycopg2-binary>=2.9.10",
]
